# onoats-bot

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
bot/: __main__.py  dual.py  runtime.py
bot/config/: audio_devices.py
bot/frames/: __init__.py  branch_vad.py
bot/processors/: audio_dump.py  dual_silence_detector.py  heartbeat_notifier.py  live_terminal.py  silence_detector.py  smart_turn_shadow.py  source_tagger.py  transcript_buffer.py
bot/stt/: __init__.py  websocket_stt_service.py
docs/: audio-socket-contract.md  blackhole-fallback.md
docs/dev_plans/: 20260607-feature-menubar-coreaudio-socket-transport.md  20260609-feature-milestone-b-macos-capture-menubar.md  20260609-fix-socket-supervisor-capturer-process-group-teardown.md  20260609-fix-socket-supervisor-signal-env-hardening.md  20260611-chore-release-0.9-to-1.0.md  20260619-bug-stoppable-orphan-session.md
native/: .gitignore  Makefile  README.md  make_cert.sh  residue_check.sh  smoke_wire_check.sh  wire_check.py
native/onoats-capturer/: Info.plist
native/onoats-capturer/Sources/: FrameWriter.swift  Maintenance.swift  MicCapture.swift  Resampler.swift  SocketServer.swift  Support.swift  SystemCapture.swift  main.swift
native/onoats-menubar/: Info.plist
native/onoats-menubar/Sources/: AudioDevices.swift  ConfigStore.swift  OnoatsMenuBarApp.swift  RecorderModel.swift
native/spike/: .gitignore  Info.plist  Makefile  main.swift  supervisor-exec.py
scripts/: check_review_markers.py  release_check.sh
src/onoats/: __main__.py  categories.py  cli.py  convert.py  dual.py  init.py  jsonl.py  pipeline.py  render.py  runtime.py  status.py
src/onoats/_vendor/: __init__.py  dictionary.py  pid.py  session_queue.py  store.py
src/onoats/config/: __init__.py  audio_devices.py
src/onoats/frames/: __init__.py
src/onoats/processors/: audio_dump.py  dual_silence_detector.py  heartbeat_notifier.py  live_terminal.py  silence_detector.py  smart_turn_shadow.py  source_tagger.py  transcript_buffer.py
src/onoats/stt/: __init__.py  websocket_stt_service.py
src/onoats/transports/: __init__.py  socket_audio.py
tests/: conftest.py  test_audio_socket_contract_parity.py  test_categories.py  test_cli.py  test_config.py  test_convert.py  test_data_dir.py  test_dual_socket_source.py  test_init.py  test_native_contract_parity.py  test_no_sqlite.py  test_onoats_imports.py  test_package_layout.py  test_pipeline_steps.py  test_release_meta.py  test_render_date.py  test_shutdown_drain.py  test_socket_audio_transport.py  test_socket_supervisor.py  test_speaker_labels.py  test_status_file.py  test_storage_data_dir.py  test_stt_config_wiring.py
