# The baseline ships MLX-free: `mlx-whisper` is NOT a baseline dependency (it
# lives in the [macos] extra) and MLX imports are lazy (inside the STT backend
# branch in runtime.py), so `import onoats.runtime` works off-mac. Verified
# against the resolved graph: the baseline `pipecat-ai[...whisper]` extra pulls
# only faster-whisper (CPU), never mlx-whisper.
[build-system]
# >=1.27: PEP 639 SPDX-string `license` support (emits License-Expression).
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "onoats"
version = "1.0.0"
description = "Standalone onoats voice recorder (extracted from koda)."
license = "BSD-2-Clause"
# >=3.12: the pinned pipecat-local-stt-server requires Python >=3.12.
requires-python = ">=3.12"
dependencies = [
    "pipecat-ai[deepgram,google,local,runner,silero,soundfile,webrtc,whisper]>=1.0.0,<2.0.0",
    "pipecat-local-stt-server @ git+https://github.com/vr000m/pipecat-local-stt-server.git@5062b984b164baec1e2396cf412888b2b64f2fa1",
    "websockets>=13.0",
    "python-dotenv>=1.2.1",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
# macOS-only acceleration. Apple Silicon Whisper (mlx-whisper) + Kokoro TTS.
# Install with `uv tool install 'onoats[macos]'`. NOT in the baseline — the
# off-mac baseline (PortAudio + Deepgram/TCP STT) ships MLX-free.
# The native macOS capturer is built from source (see native/README.md), never
# a Python dependency; the PortAudio/loopback fallback for everything else is
# documented in docs/blackhole-fallback.md.
macos = [
    "mlx-whisper>=0.4.0",
    "kokoro-onnx>=0.4.0",
]

[project.scripts]
onoats = "onoats.cli:main"

[tool.hatch.metadata]
# Allow the git+https direct reference for pipecat-local-stt-server.
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/onoats"]

[dependency-groups]
# ruff is pinned to a minor range so CI's `ruff format --check` matches the
# formatter version contributors run locally (formatter output can shift
# across ruff minors).
dev = ["pytest>=8", "ruff>=0.15,<0.16"]

[tool.pytest.ini_options]
testpaths = ["tests"]
