# The baseline ships MLX-free: `mlx-whisper` is NOT a baseline dependency (it
# lives in the [macos] extra) and MLX imports are lazy (inside the STT backend
# branch in runtime.py), so `import onoats.runtime` works off-mac. Verified
# against the resolved graph: the baseline `pipecat-ai[...whisper]` extra pulls
# only faster-whisper (CPU), never mlx-whisper.
[build-system]
# >=1.27: PEP 639 SPDX-string `license` support (emits License-Expression).
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "onoats"
version = "1.1.0"
description = "Standalone onoats voice recorder (extracted from koda)."
readme = "README.md"
license = "BSD-2-Clause"
authors = [{ name = "Varun Singh" }]
# >=3.12: the pinned pipecat-local-stt-server requires Python >=3.12.
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Capture/Recording",
]
dependencies = [
    "pipecat-ai[deepgram,google,local,runner,silero,soundfile,webrtc,whisper]>=1.0.0,<2.0.0",
    # Kept in lockstep with the running server generation. 0.3.3 added UDS
    # trust-boundary hardening (0700 socket-dir enforcement + peer-cred 403);
    # wire protocol stays "0.1", so the recorder's client code is unchanged.
    # <0.4 until the next minor is smoke-tested live against the recorder.
    "pipecat-local-stt-server>=0.3.3,<0.4",
    "websockets>=13.0",
    "python-dotenv>=1.2.1",
    "loguru>=0.7.0",
]

[project.urls]
Homepage = "https://github.com/vr000m/onoats-bot"
Changelog = "https://github.com/vr000m/onoats-bot/blob/main/CHANGELOG.md"
Issues = "https://github.com/vr000m/onoats-bot/issues"

[project.optional-dependencies]
# macOS-only acceleration. Apple Silicon Whisper (mlx-whisper) + Kokoro TTS.
# Install with `uv tool install 'onoats[macos]'`. NOT in the baseline — the
# off-mac baseline (PortAudio + Deepgram/TCP STT) ships MLX-free.
# The native macOS capturer is built from source (see native/README.md), never
# a Python dependency; the PortAudio/loopback fallback for everything else is
# documented in docs/blackhole-fallback.md.
macos = [
    "mlx-whisper>=0.4.0",
    "kokoro-onnx>=0.4.0",
]

[project.scripts]
onoats = "onoats.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/onoats"]

[dependency-groups]
# ruff is pinned to a minor range so CI's `ruff format --check` matches the
# formatter version contributors run locally (formatter output can shift
# across ruff minors).
dev = ["pytest>=8", "ruff>=0.15,<0.16"]

[tool.pytest.ini_options]
testpaths = ["tests"]
